Fix the sidebar expand and collapse

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,12 @@
  *= require_tree .
  *= require_self
  */
-.modal {
+ body {
+  transform: scale();
+  transform-origin: top left;
+}
+
+ .modal {
   position: fixed;
   z-index: 1;
   padding: 2em;
